# aliaser

./: .gitignore  .readthedocs.yml  LICENSE  README.md  pyproject.toml
aliaser/: __init__.py  decorator.py  metaclass.py  mixin.py
aliaser/metaclass/: __init__.py  alias.py  multiton.py
demo/: example.ipynb
docs/: aliaser.rst  api.rst  conf.py  development.rst  index.rst  installation.rst  modules.rst  usage.rst
